tests/script_errors/const_expr_range_out_of_bounds/error.txt
Error: 
    1 | {"snot": [0,1,2,3,4,5,6]}.snot[4:8]
      |                                ^^^ Array index out of bounds, got index range 4:8 but expected a subrange of 0:7
